Fix minor spacing issues in Header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -29,13 +29,15 @@
 }
 
 .searchContainer {
+  padding: 0 0.5em;
   margin: auto;
 }
 
 .letters {
+  padding: 0 0.5em;
   display: flex;
   font-size: 1.5rem;
-  max-width: 25em;
+  max-width: 26em;
   flex-wrap: wrap;
   justify-content: center;
   text-align: center;
